Fix: Panorma too big for viewport

--- a/src/index.css
+++ b/src/index.css
@@ -49,4 +49,5 @@ html, body {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
 }
